(add new changes on top of this file)

2013-10-01 Franz Holzinger  <franz@ttproducts.de>

	* Update for TYPO3 6.1.5 and later

2013-06-03 Franz Holzinger  <franz@ttproducts.de>

	* Update for TYPO3 4.7.7 and 6.0.6

2012-01-07 Franz Holzinger  <franz@ttproducts.de>

	* Update for TYPO3 4.6.3

2011-12-06 Franz Holzinger  <franz@ttproducts.de>

	* Update for TYPO3 4.5.8

2010-01-22 Franz Holzinger  <franz@ttproducts.de>

	* Initial release built from class.t3lib_tsparser_ext.php 5482 2009-05-22